<resources>
    <string name="app_name">TicTacToe</string>

    <!-- strings for MainActivity class -->

    <string name="homeTitle">Tic Tac Toe</string>
    <string name="playButton">Play</string>

    <!-- strings for PlayerSetUp class -->

    <string name="PlayerSetupTitle">Enter Your Name</string>
    <string name="Lable1">Player1</string>
    <string name="Lable2">Player2</string>
    <string name="SubmitButton">Submit Names</string>
    <string name="NameHint">Enter Your Name</string>

    <!-- strings for GameDisplay class -->

    <string name="playAgainButton">Play Again</string>
    <string name="homeButton">Home</string>




</resources>